- Fix issue in WP 4.3 that sent password-reset emails during user registration
- Fix problem with user registration when the password fields were hidden via Profile Fields Add-on
- Fix ms-protect-content shortcode: Resolve shortcodes in protected content also for admin users
- Fix bug in setup-wizard that sometimes did not finish after creating the first membership

1.0.2.1
----------------------------------------------------------------------
- Fix parse error during user registration in older PHP versions
 
1.0.2.0
----------------------------------------------------------------------
- Add new filter in Members list to filter members by subscription status (active/expired)
- Add new Variable for Automated Emails: Membership Description
- Add API functions: ms_api, get_membership_id, add_subscription (see API Docs for details)
- Add a "Retry" function to Transaction logs to re-process a single transaction
- Add a "Auto Matching" screen to the billings page to link M1 payments with memberships
- Add notice when unsupported Permalink options are detected
- Add condition to prevent WordPress from updating M2 Pro while WPMUDEV Dashboard is disabled
- Add logging of additional invoice data (checkout-date, IP) and improve payment history dialog
- Update the Authorize.Net library to latest version that uses the new API URLs
- Improve Invitation code Add-on to accept an code via URL param &invitation_code=abc
- Improved the details in the Pro-Rating Add-on with short instructions
- Improve Membership Description to allow shortcodes
- Improve transaction logs with more details and small layout improvements
- Improve billings list to not show invoices with status "new" by default
- Fix the user-name variables in email/shortcodes (use display name instead of login name)
- Fix the "Ignore" action in the Transaction log list
- Fix an issue where M2 returns an error to PayPal when a non-M2 payment is made Howin the PayPal account