@@ -13,6 +13,7 @@ Change Log:
 - Fix problem with user registration when the password fields were hidden via Profile Fields Add-on
 - Fix ms-protect-content shortcode: Resolve shortcodes in protected content also for admin users
 - Fix bug in setup-wizard that sometimes did not finish after creating the first membership
+- Fix issue where Manual Payment displayed price multiple times (e.g. when using Yoast SEO)
 
 1.0.2.1
 ----------------------------------------------------------------------
